tests/neg/surrogates.scala

class C {
  def `too wide for Char` = 'ğ€' // error
}
